# shadow-rs

./: Cargo.toml
src/: lib.rs
